<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/fifth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LienHeActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_Lienhe"
        app:title="@string/contact"
        app:navigationIcon="@drawable/ic_back_button"
        app:titleTextColor="@color/white"
        android:background="@color/primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <FrameLayout
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/margin_1_2"
            android:layout_width="@dimen/wrap_cart_width"
            android:layout_height="?attr/actionBarSize">
            <FrameLayout
                android:onClick="openCart"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/miniCart"
                    android:src="@drawable/ic_cart"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.cardview.widget.CardView
                    android:elevation="@dimen/margin_1"
                    android:layout_gravity="top|left"
                    app:cardCornerRadius="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="22dp"
                    android:background="@color/cost_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/thongbao_soluong"
                        android:text="0"
                        android:visibility="visible"
                        android:textAlignment="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:background="@color/cost_color"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </androidx.cardview.widget.CardView>
            </FrameLayout>
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>
    <FrameLayout
        android:layout_marginTop="@dimen/margin_1_2"
        android:layout_marginBottom="@dimen/margin_1_2"
        android:background="@color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:onClick="ToHome"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/margin_1_2"
                android:src="@drawable/logo_app" />
        </LinearLayout>
    </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
        android:layout_margin="@dimen/margin_1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:text="@string/res_name"
            android:textSize="@dimen/text_size_total"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_1_2"
            android:text="@string/user_phone"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            android:textColor="@color/second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_1_2"
                android:background="@color/second"
                android:padding="@dimen/padding_1"
                android:text="@string/res_phone"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_meidum"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:id="@+id/scroll_mess"
        android:visibility="gone"
        android:background="@drawable/custom_rate"
        android:layout_marginLeft="@dimen/margin_1"
        android:layout_marginRight="@dimen/margin_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/mess_label"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_1_2"
                android:text="@string/res_note"
                android:textSize="@dimen/text_size_title"
                android:layout_marginBottom="@dimen/margin_1"
                android:textStyle="bold"
                android:textColor="@color/second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/mess_error"
                android:visibility="gone"
                android:gravity="center"
                android:text="@string/res_note_valid"
                android:textSize="@dimen/text_size_title"
                android:layout_marginBottom="@dimen/margin_1"
                android:textColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/text_mess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_1"
                android:layout_marginRight="@dimen/margin_1"
                android:layout_marginBottom="@dimen/margin_1"
                android:background="@drawable/custom_input"
                android:hint="@string/type_user_note"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="6"
                android:minLines="1"
                android:paddingLeft="20dp"
                android:paddingTop="@dimen/padding_2"
                android:paddingRight="@dimen/padding_2"
                android:paddingBottom="@dimen/padding_2"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_dark"
                android:textSize="@dimen/text_size" />
            <Button
                android:onClick="sentMess"
                android:id="@+id/btn_sent_mess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_1"
                android:layout_marginLeft="@dimen/margin_2"
                android:layout_marginRight="@dimen/margin_2"
                android:layout_marginBottom="@dimen/margin_1"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/second"
                android:text="@string/sent_mess"
                android:textColor="@color/fifth"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>
    <FrameLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_button"
            android:onClick="DitalPhone"
            android:padding="15dp"
            android:src="@drawable/ic_phone" />
    </FrameLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>